apiGateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: fds-gateway
spec:
  gatewayClassName: fds-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---

kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: fds-route
spec:
  parentRefs:
  - name: fds-gateway
  hostnames:
  - "backend.com"
  rules:
  - matches:
    - path:
        type: Prefix
        value: api/articles
    forwardTo:
    - serviceName: article-service
      port: 80
  - matches:
    - path:
        type: Prefix
        value: api/wiki
    forwardTo:
    - serviceName: wiki-service
      port: 80
